--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^7.18.0",
     "@tanstack/react-query": "^5.67.2",
     "axios": "^1.7.7",
+    "dotenv": "^17.2.0",
     "framer-motion": "^12.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
